--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <application
         android:name=".activities.MyApp"
         android:allowBackup="true"
@@ -17,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TextTranslator"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.TranslationActivity1"
+            android:exported="false"
+            android:label="@string/title_activity_translation1"
+            android:theme="@style/Theme.TextTranslator" />
         <activity
             android:name=".activities.TranslationActivity"
             android:exported="false"
